# m2-elt

./: .gitignore  README.md  cloudbuild.yaml  johnphs.gitignore  nginx-dagster.conf  run-dagster.sh
.github/workflows/: deploy-ops-portal.yml  deploy-prod.yml  deploy-streamlit-team.yml  notify-deploys.yml
my-work/BryanTeo/: hello.txt
my-work/Charmaine/: .gitignore  elt1-environment.yml  elt1_environment.yml
my-work/HoongJun/dev/p1_el/meltano-poc/: README.md  catalog.json  config.json  meltano.yml  mock_api.py  pyproject.toml  target_demo_jsonl.py
my-work/HoongJun/dev/p1_el/meltano-poc/output/: posts.jsonl  users.jsonl
my-work/HoongJun/dev/p1_el/meltano-poc/tap_demo_api/: __init__.py  tap.py
my-work/HoongJun/dev/p1_el/meltano-poc/tap_demo_api/streams/: __init__.py  base.py
my-work/HoongJun/dev/p1_el/webapp/: pyproject.toml
my-work/JohnPhang/: readme.html  readme.md
my-work/SoonMeng/: readme.md
notes/: setup.local.md  setup.prod.md
p1_el/: README.md
p1_el/bronze/: README.md
p1_el/data/: README.md
p1_el/dlt/: README.md
p1_el/meltano/: README.md
p1_el/olist-meltano-pg/: meltano.yml
p2_warehouse_design/: README.md
p3_dbt_project/: README.md
p3_dbt_project/models/: README.md
p3_dbt_project/tests/: README.md
p4_data_quality/: README.md
p4_data_quality/great_expectations/: README.md
p4_data_quality/sql_validations/: README.md
p5_analytics/: README.md  app.MD
p5_analytics/notebooks/: painPoint3_testing.ipynb  team_eda_pp1.ipynb  team_eda_pp2.ipynb  team_eda_pp3.ipynb
p6_orchestration/: README.md
p7_docs/: README.md
(+147 files in other folders)
