[project]
name = "tap-demo-api"
version = "0.1.0"
description = "A demo Singer tap built with the Meltano SDK (QAI Lab POC)."
requires-python = ">=3.9"
dependencies = [
    "singer-sdk>=0.40",
    "requests>=2.31",
]

[project.scripts]
# This is what makes `tap-demo-api` runnable as a command (and what
# Meltano calls via `executable: tap-demo-api`). It maps the CLI name
# to the cli() function on the Tap class.
tap-demo-api = "tap_demo_api.tap:TapDemoApi.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tap_demo_api"]
