[project]
name = "p1-el-webapp"
version = "0.1.0"
description = "SCTP Team 2 · M1 — CSV → BigQuery uploader (Flask web UI)"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "google-cloud-bigquery>=3.25",
    "python-dotenv>=1.0",
    "gunicorn>=21.0",          # production server (Cloud Run)
]

[dependency-groups]
dev = ["ruff>=0.5"]

[tool.uv]
package = false